# network_simulation_c_plusplus

./: .gitignore  README.md
Sieci/: SetCommonConfig.cmake
Sieci/sieci_2/: .gitignore  CMakeLists.txt  README.md  main.cpp
Sieci/sieci_2/factory_structure_files/: struct-input.txt  struct-input_invers.txt  struct-output.txt
Sieci/sieci_2/include/: config.hpp  factory.hpp  global_functions_mock.hpp  helpers.hpp  nodes.hpp  nodes_mocks.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
Sieci/sieci_2/reports/: simulation_turn_report.txt  structure_report.txt
Sieci/sieci_2/src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
Sieci/sieci_2/test/: main_gtest.cpp  mocking_global_functions.cpp  test_Factory.cpp  test_factory_io.cpp  test_nodes.cpp  test_package.cpp  test_reports.cpp
